--- a/jc-club-auth/jc-club-auth-application/jc-club-auth-application-controller/pom.xml
+++ b/jc-club-auth/jc-club-auth-application/jc-club-auth-application-controller/pom.xml
@@ -4,22 +4,17 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.hrd</groupId>
-        <artifactId>jc-club-subject</artifactId>
+        <groupId>com.hrd.auth</groupId>
+        <artifactId>jc-club-auth-application</artifactId>
         <version>1.0-SNAPSHOT</version>
-        <relativePath>../../pom.xml</relativePath>
     </parent>
 
-    <groupId>com.hrd.subject</groupId>
-    <artifactId>jc-club-application-job</artifactId>
+    <artifactId>jc-club-auth-application-controller</artifactId>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
-        <maven.compiler.compilerVersion>17</maven.compiler.compilerVersion>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     </properties>
-
 
 </project>
