--- a/jc-club-subject/jc-club-application/pom.xml
+++ b/jc-club-subject/jc-club-application/pom.xml
@@ -12,5 +12,13 @@
     <groupId>com.hrd.subject</groupId>
     <artifactId>jc-club-application</artifactId>
 
+    <properties>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
+        <maven.compiler.compilerVersion>17</maven.compiler.compilerVersion>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+    </properties>
+
 
 </project>
