--- a/jc-club-auth/jc-club-auth-application/jc-club-auth-application-controller/pom.xml
+++ b/jc-club-auth/jc-club-auth-application/jc-club-auth-application-controller/pom.xml
@@ -17,4 +17,28 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-logging</artifactId>
+                </exclusion>
+            </exclusions>
+            <version>3.0.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.hrd.auth</groupId>
+            <artifactId>jc-club-auth-infra</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.hrd.auth</groupId>
+            <artifactId>jc-club-auth-domain</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 </project>
